check if selectedThread is null

--- a/medium/mobile-feed.mustache
+++ b/medium/mobile-feed.mustache
@@ -318,7 +318,7 @@
           }
 
           var selectedThread = threads[selectedIndex]
-          if (selectedThread){
+          if (selectedThread == null){
             console.log('test 2')
             return
           }
