--- a/medium/mobile-feed.mustache
+++ b/medium/mobile-feed.mustache
@@ -56,8 +56,8 @@
     .post-preview-container img {
       width: 64px;
       height: 64px;
-      max-width: 100%;
-      margin-right: 12px;
+      max-width: 100% !important;
+      margin-right: 12px !important;
       border-radius: 4px;
     }
   </style>
