--- a/medium/mobile-feed.mustache
+++ b/medium/mobile-feed.mustache
@@ -36,7 +36,7 @@
 
     .post-preview {
       border-bottom: 1px solid #ddd;
-      width: 100%;
+      width: 100% !important;
       padding: 0px;
       margin: 0px
     }
