the daily dose screenshot

--- a/medium/about.mustache
+++ b/medium/about.mustache
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Vertex 360 | Websites For Influencers.</title>
-    <meta name="description" content="Vertex 360 is a powerful, fully featured, easy website builder made for influencers, content creators, YouTube channels, podcasters and more." />
+    <meta name="description" content="Vertex 360 launches websites for influencers, YouTubers, content creators, podcasters or anyone who want to expand their online brand." />
 
     <meta property="og:title" content="Vertex 360 | Websites For Influencers." />
   	<meta property="og:type" content="article" />
@@ -12,7 +12,7 @@
   	<meta property="og:image" content="https://lh3.googleusercontent.com/ZM_FCvAPcwUXd3NZJNpvA-t8jb4RQkkjVAKNXYk_SQHV155T-W36Ghos9W7iiTyxaiKzXl9Z2XhaABotatD3HomhAQ=s260-c" />
   	<meta property="og:image:width" content="260px" />
   	<meta property="og:image:height" content="260px" />
-  	<meta property="og:description" content="Vertex 360 is a powerful, fully featured, easy website builder made for influencers, content creators, YouTube channels, podcasters and more." />
+  	<meta property="og:description" content="Vertex 360 launches websites for influencers, YouTubers, content creators, podcasters or anyone who want to expand their online brand." />
 
     {{>head}}
 
@@ -121,7 +121,7 @@
                                     <div class="media-body">
                                         <h5 class="mt-0">YouTube Video Transcription</h5>
                                         <span class="text-muted">
-                                          Your YouTube subscribers can now also <em>read</em> your videos through our video transcription service. See <a target="_blank" href="#">HERE</a> for an example.
+                                          Your YouTube subscribers can now also <em>read</em> your videos through our video transcription feature. See <a target="_blank" href="#">HERE</a> for an example.
                                         </span>
                                     </div>
                                 </div>
@@ -136,7 +136,7 @@
                                     <div class="media-body">
                                         <h5 class="mt-0">Podcast Player</h5>
                                         <span class="text-muted">
-                                          Stream your podcast episodes directly from your own site by simly linking the RSS feed and choosing a template with a podcast player.
+                                          Stream your podcast episodes directly from your own site by simply linking the RSS feed and choosing a template with a podcast player.
                                         </span>
                                     </div>
                                 </div>
@@ -199,9 +199,9 @@
                     </div>
                     <div class="col-md-6 order-1 order-md-2">
                         <div class="text-center">
-                          <small><em><a style="color:blue" href="#">Mixtape Template</a> for musicians</em></small>
+                          <small><em><a target="_blank" style="color:blue" href="https://www.thedailydose.io/">The Daily Dose</a></em></small>
                         </div>
-                        <img src="https://lh3.googleusercontent.com/E0SvWLIWgoUKOCz9XtBUv3cbXhxpjf4hZRdqyPbmHYH2X8AANunA_57jYWX5_13cx_z02h1hqyJ5WXOLTXFbOvNqiA=s1024" class="img-fluid d-block mx-auto" alt="iMac"/>
+                        <img src="https://lh3.googleusercontent.com/4nrUN7Jw4uPbCstMWFxqz2ROmu4dKySLGEy8Qw7Mn5CWmF7hEEHE4C6Td-6c3VDSnpvU9QUbwIllHdVQIInZVtS0W9g=s1024" class="img-fluid d-block mx-auto" alt="iMac"/>
                     </div>
                 </div>
 
@@ -265,7 +265,7 @@
                             </div>
                             <div class="media-body ml-3">
                                 <h5>Profit!</h5>
-                                <p class="text-muted">That's it! Get back to doing what you do best - growing your business.</p>
+                                <p class="text-muted">That's it! Get back to doing what you do best - creating great content and growing your audience.</p>
                             </div>
                         </div>
                     </div>
