--- a/medium/admin/pages.mustache
+++ b/medium/admin/pages.mustache
@@ -59,6 +59,7 @@
 
   <script type="text/javascript">window.__PRELOADED_STATE__ = {{{pageConfig}}}</script>
   <script type="text/javascript" src="https://cdn.turbo360-vertex.com/vertex360-cms-4hujkc/public/dist/js/vendor.min.js"></script>
+  <script type="text/javascript" src="https://cdn.turbo360-dev.com/dist/jscolor.js"></script>
 	<script type="text/javascript" src="https://cdn.turbo360-dev.com/admin/common.js"></script>
 	<script type="text/javascript" src="https://cdn.turbo360-dev.com/admin/pages.js"></script>
 </body>
