removed nav links, replaced with feed option

--- a/medium/partials/nav.mustache
+++ b/medium/partials/nav.mustache
@@ -6,19 +6,10 @@
 	<button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
 		<span class="navbar-toggler-icon"></span>
 	</button>
-	<div class="navbar-collapse collapse" id="navbarColor02" style="">
+	<div class="navbar-collapse collapse" id="navbarColor02">
 		<ul class="navbar-nav ml-auto d-flex align-items-center">
 			<li class="nav-item">
-				<a class="nav-link" href="/posts?category=culture">Culture</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="/posts?category=fashion">Fashion</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="/posts?category=tech">Tech</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="/about">About</a>
+				<a class="nav-link" href="/feed">Feed</a>
 			</li>
 			<li class="nav-item" id="nav-login">
 				<a class="nav-link" href="#" style="color:#03a87c" href="#" data-toggle="modal" data-target="#login-modal">Sign In</a>
