--- a/medium/feed.mustache
+++ b/medium/feed.mustache
@@ -210,7 +210,7 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link text-white" href="/about"><span class="mr-2 invisible">&#8226;</span>About</a>
+              <a class="nav-link text-white" href="/"><span class="mr-2 invisible">&#8226;</span>Home</a>
             </li>
             <li class="nav-item" id="nav-login">
               <a class="nav-link text-white" href="#" style="color:#03a87c" href="#" data-toggle="modal" data-target="#login-modal"><span class="mr-2 invisible">&#8226;</span>Sign In</a>
