--- a/medium/templates.mustache
+++ b/medium/templates.mustache
@@ -253,7 +253,10 @@
               </button>
             </div>
             <div class="modal-body">
-
+              <img src="https://lh3.googleusercontent.com/L0BGdl3ZcgP7Wms9mgWeWC2C0GKnLiTdiwhmGvlnyIjtdi8Fc7yjPmd7-c6p6_OxgAqcDxX9Kt2gdYkaXvhKN6qFnUM=s220-c" />
+              <img src="https://lh3.googleusercontent.com/AHDM8lXubydTYAetqHA7qAWPksbJC_ugPZilfad6_2ogJju3Bd7nfuNnBc-iR9IPlddFcPzhC1m_YnBnBAdWVNoqgw=s220-c" />
+              <img src="https://lh3.googleusercontent.com/HCN6lj15yOKZvgWmivVg4Wsh_9Gxs4uOmJTsy9npKB_7o292XeRx158Wg1hEv8Sg7E2oHGglGLDj51LFBJGQI5z9=s220-c" />
+              <img src="https://lh3.googleusercontent.com/nJJY-YH7RuMLRQxCgXWnxovDzH1nXqiG2Nt9tI9TeMqwKcUiXjqpQqrMziqVedQf2iZ1UqoJ0JKK3k4dUD-mP-SuAA=s220-c" />
               <hr />
             </div>
             <div class="text-center" style="padding:1.5rem">
