preview screenshot formatting

--- a/medium/templates.mustache
+++ b/medium/templates.mustache
@@ -185,6 +185,11 @@
       .sidebar-link {
         text-decoration: none !important;
       }
+
+      .preview-image {
+        padding: 8px;
+        border: 1px solid #ededed;
+      }
 		</style>
 </head>
     <body>
@@ -244,7 +249,7 @@
       </div>
 
       <div class="modal fade" id="template-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-dialog modal-lg" style="max-width:960px" role="document">
           <div class="modal-content" style="border-radius:4px">
             <div class="modal-header">
               <h5 class="modal-title" id="exampleModalLabel">Launch Site</h5>
@@ -253,10 +258,10 @@
               </button>
             </div>
             <div class="modal-body">
-              <img src="https://lh3.googleusercontent.com/L0BGdl3ZcgP7Wms9mgWeWC2C0GKnLiTdiwhmGvlnyIjtdi8Fc7yjPmd7-c6p6_OxgAqcDxX9Kt2gdYkaXvhKN6qFnUM=s220-c" />
-              <img src="https://lh3.googleusercontent.com/AHDM8lXubydTYAetqHA7qAWPksbJC_ugPZilfad6_2ogJju3Bd7nfuNnBc-iR9IPlddFcPzhC1m_YnBnBAdWVNoqgw=s220-c" />
-              <img src="https://lh3.googleusercontent.com/HCN6lj15yOKZvgWmivVg4Wsh_9Gxs4uOmJTsy9npKB_7o292XeRx158Wg1hEv8Sg7E2oHGglGLDj51LFBJGQI5z9=s220-c" />
-              <img src="https://lh3.googleusercontent.com/nJJY-YH7RuMLRQxCgXWnxovDzH1nXqiG2Nt9tI9TeMqwKcUiXjqpQqrMziqVedQf2iZ1UqoJ0JKK3k4dUD-mP-SuAA=s220-c" />
+              <img class="preview-image" src="https://lh3.googleusercontent.com/L0BGdl3ZcgP7Wms9mgWeWC2C0GKnLiTdiwhmGvlnyIjtdi8Fc7yjPmd7-c6p6_OxgAqcDxX9Kt2gdYkaXvhKN6qFnUM=s200-c" />
+              <img class="preview-image" src="https://lh3.googleusercontent.com/AHDM8lXubydTYAetqHA7qAWPksbJC_ugPZilfad6_2ogJju3Bd7nfuNnBc-iR9IPlddFcPzhC1m_YnBnBAdWVNoqgw=s200-c" />
+              <img class="preview-image" src="https://lh3.googleusercontent.com/HCN6lj15yOKZvgWmivVg4Wsh_9Gxs4uOmJTsy9npKB_7o292XeRx158Wg1hEv8Sg7E2oHGglGLDj51LFBJGQI5z9=s200-c" />
+              <img class="preview-image" src="https://lh3.googleusercontent.com/nJJY-YH7RuMLRQxCgXWnxovDzH1nXqiG2Nt9tI9TeMqwKcUiXjqpQqrMziqVedQf2iZ1UqoJ0JKK3k4dUD-mP-SuAA=s200-c" />
               <hr />
             </div>
             <div class="text-center" style="padding:1.5rem">
