live preview link

--- a/medium/templates.mustache
+++ b/medium/templates.mustache
@@ -265,7 +265,8 @@
               <hr />
             </div>
             <div class="text-center" style="padding:1.5rem">
-              <button style="width:100%" type="button" class="btn btn-primary btn-lg">LAUNCH SITE</button>
+              <button type="button" class="btn btn-primary btn-lg mr-2">LAUNCH SITE</button>
+              <a target="_blank" class="btn btn-danger btn-lg" href="#">Live Preview</a>
             </div>
           </div>
         </div>
