add template description

--- a/medium/templates.mustache
+++ b/medium/templates.mustache
@@ -257,15 +257,21 @@
                 <span aria-hidden="true">&times;</span>
               </button>
             </div>
-            <div class="modal-body">
-              <div class="mb-2">
-                <img src="https://lh3.googleusercontent.com/L0BGdl3ZcgP7Wms9mgWeWC2C0GKnLiTdiwhmGvlnyIjtdi8Fc7yjPmd7-c6p6_OxgAqcDxX9Kt2gdYkaXvhKN6qFnUM=s258-c" />
+            <div class="modal-body" style="display:flex">
+              <div>
+                <div class="mb-2">
+                  <img src="https://lh3.googleusercontent.com/L0BGdl3ZcgP7Wms9mgWeWC2C0GKnLiTdiwhmGvlnyIjtdi8Fc7yjPmd7-c6p6_OxgAqcDxX9Kt2gdYkaXvhKN6qFnUM=s258-c" />
+                </div>
+                <div>
+                  <img class="preview-image" src="https://lh3.googleusercontent.com/L0BGdl3ZcgP7Wms9mgWeWC2C0GKnLiTdiwhmGvlnyIjtdi8Fc7yjPmd7-c6p6_OxgAqcDxX9Kt2gdYkaXvhKN6qFnUM=s44-c" />
+                  <img class="preview-image" src="https://lh3.googleusercontent.com/AHDM8lXubydTYAetqHA7qAWPksbJC_ugPZilfad6_2ogJju3Bd7nfuNnBc-iR9IPlddFcPzhC1m_YnBnBAdWVNoqgw=s44-c" />
+                  <img class="preview-image" src="https://lh3.googleusercontent.com/HCN6lj15yOKZvgWmivVg4Wsh_9Gxs4uOmJTsy9npKB_7o292XeRx158Wg1hEv8Sg7E2oHGglGLDj51LFBJGQI5z9=s44-c" />
+                  <img class="preview-image" src="https://lh3.googleusercontent.com/nJJY-YH7RuMLRQxCgXWnxovDzH1nXqiG2Nt9tI9TeMqwKcUiXjqpQqrMziqVedQf2iZ1UqoJ0JKK3k4dUD-mP-SuAA=s44-c" />
+                </div>
               </div>
               <div>
-                <img class="preview-image" src="https://lh3.googleusercontent.com/L0BGdl3ZcgP7Wms9mgWeWC2C0GKnLiTdiwhmGvlnyIjtdi8Fc7yjPmd7-c6p6_OxgAqcDxX9Kt2gdYkaXvhKN6qFnUM=s44-c" />
-                <img class="preview-image" src="https://lh3.googleusercontent.com/AHDM8lXubydTYAetqHA7qAWPksbJC_ugPZilfad6_2ogJju3Bd7nfuNnBc-iR9IPlddFcPzhC1m_YnBnBAdWVNoqgw=s44-c" />
-                <img class="preview-image" src="https://lh3.googleusercontent.com/HCN6lj15yOKZvgWmivVg4Wsh_9Gxs4uOmJTsy9npKB_7o292XeRx158Wg1hEv8Sg7E2oHGglGLDj51LFBJGQI5z9=s44-c" />
-                <img class="preview-image" src="https://lh3.googleusercontent.com/nJJY-YH7RuMLRQxCgXWnxovDzH1nXqiG2Nt9tI9TeMqwKcUiXjqpQqrMziqVedQf2iZ1UqoJ0JKK3k4dUD-mP-SuAA=s44-c" />
+                <h3>The K Feature</h3>
+                <p>If you find yourself wrestling with CSS layout, it’s likely you’re making decisions for browsers they should be making themselves. Through a series of simple, composable layouts, Every Layout will teach you how to better harness the built-in algorithms that power browsers and CSS.</p>
               </div>
               <hr />
             </div>
