--- a/medium/templates.mustache
+++ b/medium/templates.mustache
@@ -258,7 +258,7 @@
               </button>
             </div>
             <div class="modal-body" style="display:flex">
-              <div>
+              <div style="flex:1">
                 <div class="mb-2">
                   <img src="https://lh3.googleusercontent.com/L0BGdl3ZcgP7Wms9mgWeWC2C0GKnLiTdiwhmGvlnyIjtdi8Fc7yjPmd7-c6p6_OxgAqcDxX9Kt2gdYkaXvhKN6qFnUM=s258-c" />
                 </div>
@@ -269,7 +269,7 @@
                   <img class="preview-image" src="https://lh3.googleusercontent.com/nJJY-YH7RuMLRQxCgXWnxovDzH1nXqiG2Nt9tI9TeMqwKcUiXjqpQqrMziqVedQf2iZ1UqoJ0JKK3k4dUD-mP-SuAA=s44-c" />
                 </div>
               </div>
-              <div>
+              <div style="flex:2">
                 <h3>The K Feature</h3>
                 <p>If you find yourself wrestling with CSS layout, it’s likely you’re making decisions for browsers they should be making themselves. Through a series of simple, composable layouts, Every Layout will teach you how to better harness the built-in algorithms that power browsers and CSS.</p>
               </div>
