live preview link

--- a/medium/templates.mustache
+++ b/medium/templates.mustache
@@ -270,6 +270,7 @@
                 </div>
               </div>
               <div style="flex:2">
+                <a style="float:right" href="#">Live Example</a>
                 <h3>The K Feature</h3>
                 <p>If you find yourself wrestling with CSS layout, it’s likely you’re making decisions for browsers they should be making themselves. Through a series of simple, composable layouts, Every Layout will teach you how to better harness the built-in algorithms that power browsers and CSS.</p>
               </div>
@@ -277,7 +278,6 @@
             </div>
             <div class="text-center" style="padding:1.5rem">
               <button type="button" class="btn btn-primary btn-lg mr-2">LAUNCH SITE</button>
-              <a target="_blank" class="btn btn-danger btn-lg" href="#">Live Preview</a>
             </div>
           </div>
         </div>
