--- a/medium/templates.mustache
+++ b/medium/templates.mustache
@@ -273,18 +273,17 @@
                 <a style="float:right" href="#">Live Example</a>
                 <h3>The K Feature</h3>
                 <p>If you find yourself wrestling with CSS layout, it’s likely you’re making decisions for browsers they should be making themselves. Through a series of simple, composable layouts, Every Layout will teach you how to better harness the built-in algorithms that power browsers and CSS.</p>
-                <h4>Includes</h4>
-                <ol>
-                  <li>Blog</li>
+                <h4 class="mb-0">Includes</h4>
+                <ol style="padding-left:16px">
                   <li>YouTube Transcriptions</li>
                   <li>Podcast Player</li>
                   <li>Instagram Gallery</li>
+                  <li>Blog</li>
                   <li>Email Subscribers</li>
                 </ol>
               </div>
             </div>
-            <hr />
-            <div class="text-center" style="padding:1.5rem">
+            <div class="text-center" style="padding:1.5rem;border-top:1px solid #ededed">
               <button type="button" class="btn btn-primary btn-lg mr-2">LAUNCH SITE</button>
             </div>
           </div>
