--- a/medium/templates.mustache
+++ b/medium/templates.mustache
@@ -270,7 +270,7 @@
                 </div>
               </div>
               <div style="flex:2">
-                <a style="float:right" href="#">Live Example</a>
+                <a style="float:right" href="#" class="btn btn-sm btn-danger">Live Example</a>
                 <h3>The K Feature</h3>
                 <p>If you find yourself wrestling with CSS layout, it’s likely you’re making decisions for browsers they should be making themselves. Through a series of simple, composable layouts, Every Layout will teach you how to better harness the built-in algorithms that power browsers and CSS.</p>
                 <h4 class="mb-0">Includes</h4>
