--- a/medium/templates.mustache
+++ b/medium/templates.mustache
@@ -284,6 +284,7 @@
               </div>
             </div>
             <div class="text-center" style="padding:1.5rem;border-top:1px solid #ededed">
+              <input type="text" class="form-control" />
               <button type="button" class="btn btn-primary btn-lg mr-2">LAUNCH SITE</button>
             </div>
           </div>
