--- a/medium/templates.mustache
+++ b/medium/templates.mustache
@@ -284,7 +284,7 @@
               </div>
             </div>
             <div class="text-center" style="padding:1.5rem;border-top:1px solid #ededed">
-              <input type="text" class="form-control w-25 mr-3" style="display:initial;height:48px;padding-top:2px;background:#fffffa" />
+              <input type="text" class="form-control w-25 mr-3" placeholder="Your Site Name" style="display:initial;height:48px;padding-top:2px;background:#fffffa" />
               <button type="button" class="btn btn-primary btn-lg mr-2">LAUNCH SITE</button>
             </div>
           </div>
