--- a/medium/templates.mustache
+++ b/medium/templates.mustache
@@ -232,11 +232,11 @@
 
                           {{#templates}}
                           <article class="col-md-6 {{template.category}} all">
-                              <a href="#" data-toggle="modal" data-target="#template-modal">
-                                  <div class="card mb-4" style="background-image: url('{{{image}}}=s1024');"></div>
+                              <a id="{{id}}-card" class="tpl-link" href="#" data-toggle="modal" data-target="#template-modal">
+                                <div class="card mb-4" style="background-image: url('{{{image}}}=s1024')"></div>
                               </a>
                               <h5 style="margin-bottom:0px">
-                                <a href="#" data-toggle="modal" data-target="#template-modal">{{name}}</a>
+                                <a id="{{id}}-title"class="tpl-link" href="#" data-toggle="modal" data-target="#template-modal">{{name}}</a>
                               </h5>
                           </article>
                           {{/templates}}
@@ -313,6 +313,35 @@
         </div>
       </div>
 
+      <script type="text/template" id="tpl-modal">
+        <div class="modal-body" style="display:flex">
+          <div style="flex:1">
+            <div class="mb-2">
+              <img src="<% image %>=s282-c" />
+            </div>
+            <div>
+              <img class="preview-image" src="https://lh3.googleusercontent.com/L0BGdl3ZcgP7Wms9mgWeWC2C0GKnLiTdiwhmGvlnyIjtdi8Fc7yjPmd7-c6p6_OxgAqcDxX9Kt2gdYkaXvhKN6qFnUM=s50-c" />
+              <img class="preview-image" src="https://lh3.googleusercontent.com/AHDM8lXubydTYAetqHA7qAWPksbJC_ugPZilfad6_2ogJju3Bd7nfuNnBc-iR9IPlddFcPzhC1m_YnBnBAdWVNoqgw=s50-c" />
+              <img class="preview-image" src="https://lh3.googleusercontent.com/HCN6lj15yOKZvgWmivVg4Wsh_9Gxs4uOmJTsy9npKB_7o292XeRx158Wg1hEv8Sg7E2oHGglGLDj51LFBJGQI5z9=s50-c" />
+              <img class="preview-image" src="https://lh3.googleusercontent.com/nJJY-YH7RuMLRQxCgXWnxovDzH1nXqiG2Nt9tI9TeMqwKcUiXjqpQqrMziqVedQf2iZ1UqoJ0JKK3k4dUD-mP-SuAA=s50-c" />
+            </div>
+          </div>
+          <div style="flex:2">
+            <a style="float:right" href="#" class="btn btn-sm btn-danger">Live Example</a>
+            <h3><% name %></h3>
+            <p>If you find yourself wrestling with CSS layout, it’s likely you’re making decisions for browsers they should be making themselves. Through a series of simple, composable layouts, Every Layout will teach you how to better harness the built-in algorithms that power browsers and CSS.</p>
+            <h4 class="mb-0">Includes</h4>
+            <ol style="padding-left:16px">
+              <li>YouTube Transcriptions</li>
+              <li>Podcast Player</li>
+              <li>Instagram Gallery</li>
+              <li>Blog</li>
+              <li>Email Subscribers</li>
+            </ol>
+          </div>
+        </div>
+      </script>
+
       <script type="text/javascript">window.__PRELOADED__ = {{{preloaded}}}</script>
       <script type="text/javascript" src="{{{cdn}}}/scripts/vertex-lib.js"></script>
       <script type="text/javascript" src="{{{cdn}}}/js/mustache.js"></script>
@@ -328,7 +357,16 @@
 
       <script>
         (function(){
-          $('.sidebar-link').on('click', function (e) {
+          Mustache.tags = ["<%", "%>"] // change delimiter so it doesn't conflict server side
+
+          $('.tpl-link').each(function(i, link){
+            $(this).click(function(e){
+              console.log('Selecte Template: ' + e.target.id)
+
+            })
+          })
+
+          $('.sidebar-link').on('click', function(e){
               e.preventDefault();
               $(this).parent().addClass('active').siblings().removeClass('active');
 
