--- a/medium/templates.mustache
+++ b/medium/templates.mustache
@@ -361,7 +361,7 @@
 
           $('.tpl-link').each(function(i, link){
             $(this).click(function(e){
-              console.log('Selecte Template: ' + e.target.id)
+              console.log('Select Template: ' + $(this).attr('id'))
 
             })
           })
