--- a/medium/templates.mustache
+++ b/medium/templates.mustache
@@ -360,10 +360,7 @@
           Mustache.tags = ["<%", "%>"] // change delimiter so it doesn't conflict server side
           var data = window.__PRELOADED__
           var templates = data.templates
-          var templatesMap = {}
-          templates.forEach(function(template){
-            templatesMap[template.id] = template
-          })
+          var templatesMap = data.templatesMap
 
           $('.tpl-link').each(function(i, link){
             $(this).click(function(e){
