--- a/medium/templates.mustache
+++ b/medium/templates.mustache
@@ -257,7 +257,7 @@
                 <span aria-hidden="true">&times;</span>
               </button>
             </div>
-            <div class="modal-body" style="display:flex">
+            <div id="template-modal-content" class="modal-body" style="display:flex">
               <div style="flex:1">
                 <div class="mb-2">
                   <img src="https://lh3.googleusercontent.com/L0BGdl3ZcgP7Wms9mgWeWC2C0GKnLiTdiwhmGvlnyIjtdi8Fc7yjPmd7-c6p6_OxgAqcDxX9Kt2gdYkaXvhKN6qFnUM=s282-c" />
@@ -371,7 +371,7 @@
 
               var tpl = $('#tpl-modal').html()
               var tplModal = Mustache.render(tpl, template)
-              $('#template-modal').html(tplModal)
+              $('#template-modal-content').html(tplModal)
             })
           })
 
